# portal-backend

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/core/: .importlinter  Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/core/alembic/: env.py
apps/core/alembic/versions/: 4e2244ca5c4a_create_organizations.py  b3c040b945d8_create_users_roles_permissions_.py
apps/core/app/core/: app_factory.py  config.py  logging.py
apps/core/app/modules/auth/application/: dto.py
apps/core/app/modules/auth/application/ports/: __init__.py  enforcer.py  password_hasher.py  token_denylist.py  token_issuer.py
apps/core/app/modules/auth/application/use_cases/: create_user.py  get_current_user.py  login.py  logout.py  refresh_access_token.py
apps/core/app/modules/auth/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
apps/core/app/modules/auth/infrastructure/: bootstrap.py
apps/core/app/modules/auth/infrastructure/casbin/: enforcer.py  model.conf
apps/core/app/modules/auth/infrastructure/persistence/: mappers.py  orm.py  repositories.py
apps/core/app/modules/auth/infrastructure/security/: password_hasher.py  token_denylist.py  token_issuer.py
apps/core/app/modules/auth/presentation/: cookies.py  deps.py  routes.py  schemas.py
apps/core/app/modules/organizations/application/: dto.py
apps/core/app/modules/organizations/application/use_cases/: create_root_organization.py  get_organization.py  list_organizations.py  update_organization.py
apps/core/app/modules/organizations/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
apps/core/app/modules/organizations/infrastructure/persistence/: mappers.py  orm.py  repositories.py
apps/core/app/modules/organizations/presentation/: deps.py  routes.py  schemas.py
apps/core/app/modules/organizations/tests/integration/: test_repository.py
apps/core/app/modules/organizations/tests/unit/: fake_repository.py  test_create_root_organization.py  test_entity.py  test_get_and_update.py  test_value_objects.py
apps/core/app/modules/setup/application/: setup_instance.py
apps/core/app/modules/setup/presentation/: deps.py  routes.py  schemas.py
apps/core/app/shared/infrastructure/db/: __init__.py  base.py  engine.py
apps/core/tests/e2e/: test_setup_and_organizations.py
docs/: architecture.md  local-development.md  stages.md
docs/adr/: 0001-modular-monolith-for-core.md  0002-connectors-as-separate-services.md  0003-canonical-models-as-integration-contract.md  0004-multi-tenancy-via-organization-id.md  0005-rabbitmq-as-event-bus.md  0006-two-repo-split.md  0007-clean-architecture.md  0008-oop-first-with-functional-routes.md  0009-single-tenant-per-deployment.md  0010-auth-jwt-cookies-casbin.md
docs/modules/: auth.md  organizations.md
infra/: docker-compose.dev.yml
