[project]
name = "portal-backend"
version = "0.1.0"
description = "Portal — modular corporate portal platform: backend services workspace"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Alexander Puzhinskii" }]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "import-linter>=2.1",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "apps/core/alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF"]
ignore = [
    # Сообщения, идентификаторы и docstring могут содержать кириллицу —
    # это не опечатки, а основной язык документации проекта.
    "RUF001",
    "RUF002",
    "RUF003",
    # Domain-driven naming: исключения вроде ProductNotFound / InvalidEmail
    # читаются естественнее, чем ProductNotFoundError. Конвенция проекта.
    "N818",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers --import-mode=importlib"
