[project]
name = "portal-core"
version = "0.1.0"
description = "Portal core API — modular monolith"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "arq>=0.26.3",
    "aio-pika>=9.5.0",
    "canonical-models",
    "connector-sdk",
    "event-schemas",
]

[tool.uv.sources]
canonical-models = { workspace = true }
connector-sdk = { workspace = true }
event-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
files = ["app"]

[[tool.mypy.overrides]]
module = ["aio_pika.*", "arq.*"]
ignore_missing_imports = true
